test/parsing/ferguson/many-errors.good
many-errors.chpl:3: error: syntax error near '}'
many-errors.chpl:9: error: syntax error near ';'
many-errors.chpl:17: error: syntax error near ';'
many-errors.chpl:22: error: syntax error near 'int'
many-errors.chpl:30: error: syntax error near '}'
