test/parsing/ferguson/many-errors.chpl
proc t1() {
  TODO
}

proc t3() {
  a;
  b;
  c;
  ~;
  d;
}

proc t4() {
  a;
  b;
  c;
  + +;
  d;
}

class t5 {
  int x;
  int y;
}

module submodule {
  a;
  b;
  + + +
}


